2019-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* TclMagick/pkgIndex.tcl: Incorporate recommendations from third
	problem noted in SourceForge issue #420 "TclMagick issues and
	patch".  This is supposed to help support using an uninstalled
	GraphicsMagick and allow the installation path to contain a space.

	* wand/magick_wand.c (MagickClearException): Destroy any existing
	exception info before re-initializing the exception info or else
	there will be a memory leak.

	* TclMagick/generic/libttkcommon.c (myMagickError): Clear
	exception from the Wand after it has been reported.  Addresses the
	fourth problem noted by SourceForge issue #420 "TclMagick issues
	and patch".  However, MagickClearException() already clears an
	exception in the Wand, so a new function is not needed.

	* TclMagick/unix/m4/tcl.m4: Change hard-coded INSTALL path to
	point to config/install-sh.  Re-generated/updated Autotools stuff
	by executing the genconf.sh script.  Addresses the first problem
	noted by SourceForge issue #420 "TclMagick issues and patch".

2019-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (SetNexus): Eliminate warning about
	possibly uninitialized variable from primordial GCC 3.4.3.

	* magick/render.c (ConvertPrimitiveToPath): Eliminate warning that
	IsClosedSubPath might be used uninitialized.

	* magick/common.h ("MAGICK_FALLTHROUGH"): Added a
	MAGICK_FALLTHROUGH macro to support the GCC/Clang fallthrough
	attribute when the time comes again that it would be useful.

2019-10-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pcx.c (ReadPCXImage): Verify that pixel region is not
	negative. Assure that opacity channel is initialized to
	opaqueOpacity.  Update DirectClass representation while
	PseudoClass representation is updated.  Improve read performance
	with uncompressed PCX.

2019-10-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (ReadXPMImage): Image properties are expected to